--- a/shinyapp/dashboard-dev/uj-dashboard-dev.qmd
+++ b/shinyapp/dashboard-dev/uj-dashboard-dev.qmd
@@ -209,12 +209,12 @@ selectizeInput("comparison_papers", label = "Select papers to compare:",
 ```
 
 ```{r}
-plotlyOutput("plot_comparison", height = "650px")
+plotlyOutput("plot_comparison", height = "550px")
 ```
 
-##### {.tabset}
+#### Column {width=30%}
 
-###### Comparison Table
+##### Comparison Table
 
 ```{r}
 DTOutput("table_comparison")
@@ -564,29 +564,43 @@ output$table_criteria <- renderDT({
 })
 
 
-# Interactive comparison plot with dual x-axes
-# Uses ggplot2 for reliable vertical layout, then adds secondary axis via plotly
+# Interactive comparison plot with dual x-axes using native plotly
 output$plot_comparison <- renderPlotly({
   if (length(input$comparison_papers) == 0) {
-    plotly::ggplotly(
-      ggplot() +
-        annotate("text", x = 0.5, y = 0.5,
-                 label = "Select papers above to compare", size = 6) +
-        theme_void()
-    )
+    plotly::plot_ly() |>
+      plotly::add_annotations(
+        text = "Select papers above to compare",
+        x = 0.5, y = 0.5, xref = "paper", yref = "paper",
+        showarrow = FALSE, font = list(size = 16)
+      ) |>
+      plotly::layout(xaxis = list(visible = FALSE), yaxis = list(visible = FALSE))
   } else {
     # Define criteria order (Overall at top, Predicted journal tier at bottom)
     criteria_order <- c(
       "Overall assessment",
-      "Advancing knowledge and practice",
+      "Advancing knowledge",
       "Methods",
-      "Logic and communication",
+      "Logic & communication",
       "Real world relevance",
-      "Global relevance/usefulness",
-      "Claims and evidence",
-      "Open, replicable science",
+      "Global relevance",
+      "Claims & evidence",
+      "Open science",
       "Deserved journal tier",
       "Predicted journal tier"
+    )
+
+    # Map criteria codes to short labels
+    criteria_short <- c(
+      "overall"         = "Overall assessment",
+      "adv_knowledge"   = "Advancing knowledge",
+      "methods"         = "Methods",
+      "logic_comms"     = "Logic & communication",
+      "real_world"      = "Real world relevance",
+      "gp_relevance"    = "Global relevance",
+      "claims"          = "Claims & evidence",
+      "open_sci"        = "Open science",
+      "merits_journal"  = "Deserved journal tier",
+      "journal_predict" = "Predicted journal tier"
     )
 
     plot_data <- evals() |>
@@ -594,71 +608,99 @@ output$plot_comparison <- renderPlotly({
       summarize(.by = c(research, criteria),
                 rating = mean(middle_rating, na.rm = TRUE)) |>
       mutate(
-        # Scale journal tier (0-5) to 0-100 for consistent plotting
         rating_scaled = ifelse(criteria %in% c("merits_journal", "journal_predict"),
                         rating * 20, rating),
-        criteria_label = criteria_titles[criteria],
-        # Set factor levels so Overall is at top, Predicted at bottom
-        criteria_label = factor(criteria_label, levels = rev(criteria_order))
+        criteria_label = criteria_short[criteria]
       ) |>
       filter(!is.na(criteria_label))
 
-    # Create ggplot with proper vertical layout
-    gg <- ggplot(plot_data, aes(x = rating_scaled, y = criteria_label, color = research,
-                                 text = paste0(research, "<br>Rating: ", round(rating_scaled, 1)))) +
-      geom_point(size = 4) +
-      geom_line(aes(group = research), orientation = "y", alpha = 0.6, linewidth = 1.2) +
-      scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, 20),
-                         sec.axis = sec_axis(~ . / 20, name = "Journal tier",
-                                            breaks = 1:5)) +
-      labs(
-        title = NULL,
-        x = "Percentile rank",
-        y = NULL,
-        color = NULL
-      ) +
-      theme_minimal() +
-      theme(
-        panel.grid.major.y = element_line(color = "grey85"),
-        panel.grid.minor.x = element_blank(),
-        axis.text.y = element_text(size = 13),
-        axis.text.x = element_text(size = 12),
-        axis.title.x.bottom = element_text(size = 13, margin = margin(t = 8)),
-        axis.title.x.top = element_text(size = 13, margin = margin(b = 8)),
-        legend.position = "top",
-        legend.text = element_text(size = 11),
-        legend.box.margin = margin(b = -5)
-      ) +
-      guides(color = guide_legend(nrow = 2))
+    # Get unique papers and assign colors
+    papers <- unique(plot_data$research)
+    colors <- scales::hue_pal()(length(papers))
 
-    # Convert to plotly - note: sec_axis may not convert perfectly,
-    # so we add the secondary axis manually via layout
-    p <- plotly::ggplotly(gg, tooltip = "text")
+    # Create the plot
+    p <- plotly::plot_ly()
 
-    # Add secondary x-axis at top showing Journal tier scale
+    # Add traces for each paper
+    for (i in seq_along(papers)) {
+      paper_data <- plot_data |>
+        filter(research == papers[i]) |>
+        # Sort by criteria order for proper line connections
+        mutate(y_order = match(criteria_label, criteria_order)) |>
+        arrange(y_order)
+
+      # Add connecting line
+      p <- p |> plotly::add_trace(
+        data = paper_data,
+        x = ~rating_scaled,
+        y = ~criteria_label,
+        type = "scatter",
+        mode = "lines",
+        line = list(color = colors[i], width = 2),
+        showlegend = FALSE,
+        hoverinfo = "skip"
+      )
+
+      # Add points
+      p <- p |> plotly::add_trace(
+        data = paper_data,
+        x = ~rating_scaled,
+        y = ~criteria_label,
+        type = "scatter",
+        mode = "markers",
+        marker = list(color = colors[i], size = 10),
+        name = substr(papers[i], 1, 40),
+        text = ~paste0(research, "<br>Rating: ", round(rating_scaled, 1)),
+        hoverinfo = "text"
+      )
+    }
+
+    # Configure layout with dual x-axes
     p |> plotly::layout(
-      hoverlabel = list(bgcolor = "white", font = list(size = 12)),
+      xaxis = list(
+        title = list(text = "Percentile rank", font = list(size = 12)),
+        range = c(0, 105),
+        tickvals = seq(0, 100, 20),
+        tickfont = list(size = 11),
+        side = "bottom",
+        showgrid = TRUE,
+        gridcolor = "rgba(200,200,200,0.3)"
+      ),
+      xaxis2 = list(
+        title = list(text = "Journal tier", font = list(size = 12)),
+        overlaying = "x",
+        side = "top",
+        range = c(0, 105),
+        tickvals = c(20, 40, 60, 80, 100),
+        ticktext = c("1", "2", "3", "4", "5"),
+        tickfont = list(size = 11),
+        showgrid = FALSE,
+        zeroline = FALSE
+      ),
+      yaxis = list(
+        title = "",
+        categoryorder = "array",
+        categoryarray = rev(criteria_order),
+        tickfont = list(size = 11),
+        showgrid = TRUE,
+        gridcolor = "rgba(200,200,200,0.3)"
+      ),
       legend = list(
         orientation = "h",
         x = 0.5,
+        y = 1.15,
         xanchor = "center",
-        y = 1.02,
-        font = list(size = 11)
+        font = list(size = 10)
       ),
-      margin = list(t = 50, l = 200, b = 50, r = 20),
-      xaxis = list(
-        title = list(text = "Percentile rank", font = list(size = 13)),
-        side = "bottom"
-      ),
-      xaxis2 = list(
-        title = list(text = "Journal tier", font = list(size = 13)),
-        overlaying = "x",
-        side = "top",
-        range = c(0, 100),
-        tickvals = c(20, 40, 60, 80, 100),
-        ticktext = c("1", "2", "3", "4", "5"),
-        showgrid = FALSE
-      )
+      margin = list(t = 80, l = 150, b = 50, r = 20),
+      hoverlabel = list(bgcolor = "white", font = list(size = 11))
+    ) |>
+    # Add invisible trace to force xaxis2 to show
+    plotly::add_trace(
+      x = c(0, 100), y = c(criteria_order[1], criteria_order[1]),
+      type = "scatter", mode = "markers",
+      marker = list(opacity = 0), xaxis = "x2",
+      showlegend = FALSE, hoverinfo = "skip"
     )
   }
 })
